# ahc-season-ranking

./: Cargo.toml  LICENSE  README.md
.github/workflows/: azure-static-web-apps-delightful-field-038b10c00.yml
crawler/: Cargo.toml
crawler/src/: main.rs
rating-core/: Cargo.toml
rating-core/src/: lib.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
web/: index.html  package.json  pnpm-lock.yaml
web/src/: App.tsx  index.css  types.ts
web/src/components/: InitWasm.tsx  MainView.tsx
web/src/components/ApplicationBar/: index.tsx
web/src/components/Help/: index.tsx
web/src/components/Individual/: index.tsx
web/src/components/MainTab/: index.tsx
web/src/components/SettingPanel/: PeriodSelect.tsx  YearSelect.tsx  index.tsx
web/src/components/Standings/: index.tsx
web/src/utils/: Data.ts  Date.ts  Rating.ts
