[package]
name = "crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
reqwest = { version = "0.12.4", features = ["blocking"] }
rating-core = { path = "../rating-core" }
anyhow = "1.0.82"
serde = "1.0.199"
serde_json = "1.0.116"
itertools = "0.12.1"
comfy-table = "7.1.1"
